<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_equipment">

    <fragment
        android:id="@+id/navigation_auth_and_register"
        android:name="com.mkvsk.dundgeonbook.ui.authentication.AuthAndRegisterFragment"
        android:label="@string/title_auth_and_register"
        tools:layout="@layout/fragment_auth_and_register">

        <action
            android:id="@+id/action_go_to_skills_from_register"
            app:destination="@id/navigation_skills" />
    </fragment>

    <fragment
        android:id="@+id/navigation_skills"
        android:name="com.mkvsk.dundgeonbook.ui.main.SkillsFragment"
        android:label="@string/title_skills"
        tools:layout="@layout/fragment_skills" />

    <fragment
        android:id="@+id/navigation_equipment"
        android:name="com.mkvsk.dundgeonbook.ui.main.EquipmentFragment"
        android:label="@string/title_equipment"
        tools:layout="@layout/fragment_equipment" />

</navigation>