<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.authentication.AuthAndRegisterFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bgr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_divider"
        android:gravity="center"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field"
            android:fontFamily="@font/jolly_lodger"
            android:hint="@string/hint_nickname"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp"
            tools:text="nickname" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field"
            android:fontFamily="@font/jolly_lodger"
            android:hint="@string/hint_password"
            android:paddingTop="8dp"
            android:password="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp"
            tools:text="password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bgr"
            android:enabled="false"
            android:text="@string/text_log_in"
            android:textAppearance="@style/txtAppCompatButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>