<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_opacity_40_bgr"
    android:orientation="vertical"
    android:paddingHorizontal="8dp"
    android:paddingVertical="16dp"
    tools:context=".ui.main.SkillsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerBloodyMoon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jolly_lodger"
            android:text="@string/title_available"
            android:textColor="@color/red"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@id/ivBloodyMoon"
            app:layout_constraintEnd_toStartOf="@id/ivBloodyMoon"
            app:layout_constraintTop_toTopOf="@id/ivBloodyMoon" />

        <ImageView
            android:id="@+id/ivBloodyMoon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/bloody_moon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAvailablePointsQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jolly_lodger"
            android:text="@string/default_available_points_qty"
            android:textColor="#D39898"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@id/ivBloodyMoon"
            app:layout_constraintEnd_toEndOf="@id/ivBloodyMoon"
            app:layout_constraintStart_toStartOf="@id/ivBloodyMoon"
            app:layout_constraintTop_toTopOf="@id/ivBloodyMoon" />

        <TextView
            android:id="@+id/titlePoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jolly_lodger"
            android:text="@string/title_points"
            android:textColor="@color/red"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@id/ivBloodyMoon"
            app:layout_constraintStart_toEndOf="@id/ivBloodyMoon"
            app:layout_constraintTop_toTopOf="@id/ivBloodyMoon" />

        <TextView
            android:id="@+id/titleSkillPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jolly_lodger"
            android:text="@string/title_skill_points"
            android:textColor="@color/pale_orange"
            android:textSize="34sp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvSkills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBloodyMoon">

        <LinearLayout
            android:id="@+id/llSkills"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSkills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="7"
                tools:listitem="@layout/rv_skill_item" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bgr"
        android:enabled="false"
        android:text="@string/text_save"
        android:textAppearance="@style/txtAppCompatButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nsvSkills" />

    <view
        android:id="@+id/multilineEditText"
        class="com.mkvsk.dundgeonbook.utils.LinedEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="8dp"
        android:maxLines="10"
        android:minLines="3"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:text="dfldmfld"
        android:textColor="@color/purple_200"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>